adding images to tools table

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "@vercel/blob": "^1.0.0",
     "bcrypt": "^5.1.1",
     "next": "15.2.3",
     "next-auth": "^4.24.11",
